--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -19,6 +19,10 @@
   justify-content: center;
 }
 
+.align-center {
+  align-items: center;
+}
+
 .w-100 {
   width: 100%;
 }
@@ -60,13 +64,13 @@
 }
 
 .img-size {
-  width: 45vw;
-  min-width: 370px;
+  // width: 45vw;
+  min-width: 300px;
 }
 
 .contact-icons {
   height: 1rem;
-  margin-right: 1rem;
+  margin-right: 0.6rem;
   // background-color: $green;
   // border-radius: 5px;
   color: $green;
